# accelerate-c

./: LICENSE  README.md  accelerate-c.cabal
Data/Array/Accelerate/: C.hs
Data/Array/Accelerate/C/: Acc.hs  Base.hs  Execute.hs  Exp.hs  Load.hs  Type.hs
cbits/: accelerate_c.h
